--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,15 @@ dependencies:
   shared_preferences: ^2.3.2
   go_router: ^14.2.7
   freezed_annotation: ^2.4.4
-  retrofit: ^4.2.0
+  retrofit: ^4.4.0
   pretty_dio_logger: ^1.3.1
-  dio: ^5.4.2+1
-  appflowy_editor: ^3.1.0
+  dio: ^5.7.0
+  appflowy_editor: ^3.2.0
   markdown: ^7.2.2
   highlight: ^0.7.0
   envied: ^0.5.4+1
-  
+  textfield_tags: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,7 +59,7 @@ dev_dependencies:
   json_serializable: ^6.8.0
   riverpod_lint: ^2.3.10
   riverpod_generator: ^2.4.0
-  retrofit_generator: ^8.1.0
+  retrofit_generator: ^8.2.1
   envied_generator: ^0.5.4+1
 
 # For information on the generic Dart part of this file, see the
