--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   retrofit: ^4.4.0
   pretty_dio_logger: ^1.3.1
   dio: ^5.7.0
-  appflowy_editor: ^3.2.0
-  markdown: ^7.2.2
-  highlight: ^0.7.0
   envied: ^0.5.4+1
   textfield_tags: ^3.0.1
+  irh_editor:
+    path: packages/irh_editor
+  syntax_highlight: ^0.4.0
 
 dev_dependencies:
   flutter_test:
