--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   shared_preferences: ^2.3.2
   go_router: ^14.2.7
   freezed_annotation: ^2.4.4
-  retrofit: ^4.4.0
+  retrofit: ^4.4.1
   pretty_dio_logger: ^1.3.1
   dio: ^5.7.0
   envied: ^0.5.4+1
@@ -44,6 +44,7 @@ dependencies:
   irh_editor:
     path: packages/irh_editor
   syntax_highlight: ^0.4.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
